# nline-road-profiler

./: .gitignore  README.md  SETUP.md  pyproject.toml
src/: config.py  main.py
src/api/: server.py
src/hardware/: camera.py  gps.py  imu.py
src/storage/: recorder.py
tools/: validate_session.py
web/: index.html
