[project]
name = "road-profiler"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "depthai>=3.0.0",
    "opencv-python-headless>=4.0.0",
    "pynmeagps>=1.0.0",
    "pyubx2>=1.0.0",
    "pyserial>=3.5",
    "ahrs>=0.3.0",
    "numpy>=1.26.0",
    "lz4>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
road-profiler = "src.main:main"
